_includes/manuals/1.4/3.3.1_rpm_packages.md

Foreman is packaged for the following RPM based distributions:

* RHEL and derivatives, version 6
* Fedora 19

For most users, it's highly recommended to use the [installer](manuals/{{page.version}}/index.html#3.2ForemanInstaller) as the packages only provide the software and a standalone Foreman service.  The installer installs these packages, then additionally configures Foreman to run under Apache and Passenger with PostgreSQL, plus can configure a complete Puppet setup integrated with Foreman.

#### Pre-requisites

All RHEL and derivatives must be [subscribed to EPEL](http://fedoraproject.org/wiki/EPEL) to provide additional dependencies.  Install epel-release from [here](http://fedoraproject.org/wiki/EPEL#How_can_I_use_these_extra_packages.3F) to automatically configure it.

RHEL 6 hosts must also be subscribed to the RHEL 6 Optional repository or child channel in RHN.

All RHEL and derivatives require Red Hat Software Collections (RHSCL) 1.0 or rebuild, e.g. Software Collections for CentOS.  RHSCL is available to RHEL customers as a separate repository or child channel.  More information on Software Collections for CentOS [is available here](http://lists.centos.org/pipermail/centos-announce/2013-October/020000.html) and for Scientific Linux it [is available here](http://ftp.scientificlinux.org/linux/scientific/6/x86_64/external_products/softwarecollections/).

To enable both optional and software collections on a RHEL 6 system using subscription-manager, run:

    yum-config-manager --enable rhel-6-server-optional-rpms rhel-server-rhscl-6-rpms

Optionally, the Puppet Labs repository can be configured to obtain the latest version of Puppet available, instead of the version on EPEL.  See the [Puppet Labs Package Repositories](http://docs.puppetlabs.com/guides/puppetlabs_package_repositories.html#for-red-hat-enterprise-linux-and-derivatives) documentation on how to configure these.

#### Available repositories

Three main repos are provided at <http://yum.theforeman.org>:

* `/releases/latest` or `/releases/VERSION` (e.g. `/releases/{{page.version}}`) carries the stable releases and updates of Foreman and its dependencies.
* `/rc` carries release candidates only in the few weeks prior to a release.  Ensure after a release is made that you use the main releases repo instead.
* `/nightly` carries the latest development builds and as such, may be unstable or occasionally broken.

Under each repo are directories for each distribution, then each architecture.

#### Release packages

To set up the repository, foreman-release packages are provided which add a repo definition to `/etc/yum.repos.d`.  Install the appropriate release RPM from these lists:

    yum localinstall http://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
    yum localinstall http://yum.theforeman.org/releases/{{page.version}}/f19/x86_64/foreman-release.rpm

For release candidate or nightly RPMs, change the URL as appropriate based on the above list of available repositories.

#### Signing

Release and release candidate packages are signed by the "Foreman Archive Signing Key <packages@theforeman.org>" (0xE775FF07).  Nightly packages are not signed.

A copy of the key is available from public keyservers or [here](http://yum.theforeman.org/RPM-GPG-KEY-foreman).

#### Available packages

Install foreman and other foreman-* packages to add functionality:

    foreman               Foreman server
    foreman-proxy         Foreman Smart Proxy
    foreman-compute       EC2, OpenStack and Rackspace provisioning support
    foreman-libvirt       libvirt provisioning support
    foreman-ovirt         oVirt/RHEV provisioning support
    foreman-vmware        VMware provisioning support
    foreman-cli           Foreman CLI utility
    foreman-console       Console additions
    foreman-selinux       SELinux targeted policy
    foreman-mysql2        MySQL database support
    foreman-postgresql    PostgreSQL database support
    foreman-sqlite        SQLite database support

#### Setup

1. Configure by editing `/etc/foreman/settings.yaml` and `/etc/foreman/database.yml`
1. After changing the database, migrate it: `sudo -u foreman /usr/share/foreman/extras/dbmigrate`
1. Start the foreman service or set up passenger: `service foreman start`

#### Upgrade

See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgrade)

